test/fixtures/fail/catchall_q_nospace.l4gs.g
; ?n& (? without space before param, no !) is invalid
calminstruction ?n&
  assemble n
end calminstruction
